latex2mmlc/src/snapshots/latex2mmlc__parse__tests__big_paren.snap
---
source: latex2mmlc/src/parse.rs
expression: "\\big("
---
[
  SizedParen(Scale1, ParenOp('(', None, Always)),
]
