latex2mmlc/src/snapshots/latex2mmlc__parse__tests__boldsymbol_greek_var.snap
---
source: latex2mmlc/src/parse.rs
expression: "\\boldsymbol{\\Gamma\\varGamma}"
---
[
  TextTransform(
    tf: Transform(BoldItalic),
    content: Row(
      nodes: [
        SingleLetterIdent('Γ', true),
        SingleLetterIdent('Γ', false),
      ],
      attr: None,
    ),
  ),
]
