latex2mmlc/src/snapshots/latex2mmlc__parse__tests__colon_fusion_stop.snap
---
source: latex2mmlc/src/parse.rs
expression: ":2=:="
---
[
  OperatorWithSpacing(
    op: Op(':'),
    left: Some(FourMu),
    right: Some(FourMu),
  ),
  Number("2"),
  Operator(Op('='), None),
  Operator(Op('≔'), None),
]
