latex2mmlc/src/snapshots/latex2mmlc__parse__tests__comment.snap
---
source: latex2mmlc/src/parse.rs
expression: "\\text{% comment}\n\\%as}"
---
[
  Text("\u{a0}%as"),
]
