latex2mmlc/src/snapshots/latex2mmlc__parse__tests__complex_square_root.snap
---
source: latex2mmlc/src/parse.rs
expression: "\\sqrt{x+2}"
---
[
  Sqrt(Row(
    nodes: [
      SingleLetterIdent('x', None),
      Operator(Op('+'), None),
      Number("2"),
    ],
    style: None,
  )),
]
