latex2mmlc/src/snapshots/latex2mmlc__parse__tests__double_prime.snap
---
source: latex2mmlc/src/parse.rs
expression: "f''"
---
[
  Superscript(
    target: SingleLetterIdent('f', None),
    symbol: Operator(Op('″'), None),
  ),
]
