latex2mmlc/src/snapshots/latex2mmlc__parse__tests__frac_with_subscript.snap
---
source: latex2mmlc/src/parse.rs
expression: "\\frac12_x"
---
[
  Subscript(
    target: Frac(
      num: Number("1"),
      den: Number("2"),
      lt: None,
      attr: None,
    ),
    symbol: SingleLetterIdent('x', false),
  ),
]
