latex2mmlc/src/snapshots/latex2mmlc__parse__tests__genfrac.snap
---
source: latex2mmlc/src/parse.rs
expression: "\\genfrac(){1pt}{0}{1}{2}"
---
[
  Fenced(
    style: Some(DisplayStyle),
    open: ParenOp('(', false, Always),
    close: ParenOp(')', false, Always),
    content: Frac(
      num: Number("1"),
      den: Number("2"),
      lt: Some(-2147483288),
      attr: None,
    ),
  ),
]
