latex2mmlc/src/snapshots/latex2mmlc__parse__tests__integral_with_reversed_limits.snap
---
source: latex2mmlc/src/parse.rs
expression: "\\int\\limits^1_0 dx"
---
[
  UnderOver(
    target: Operator(Op('∫'), None),
    under: Number("0"),
    over: Number("1"),
  ),
  SingleLetterIdent('d', false),
  SingleLetterIdent('x', false),
]
