latex2mmlc/src/snapshots/latex2mmlc__parse__tests__long_sub_super.snap
---
source: latex2mmlc/src/parse.rs
expression: "x_{92}^{31415}"
---
[
  SubSup(
    target: SingleLetterIdent('x', None),
    sub: Number("92"),
    sup: Number("31415"),
  ),
]
