latex2mmlc/src/snapshots/latex2mmlc__parse__tests__mathit_func.snap
---
source: latex2mmlc/src/parse.rs
expression: "\\mathit{ab \\log cd}"
---
[
  TextTransform(
    tf: Transform(Italic),
    content: Row(
      nodes: [
        CollectedLetters("ab"),
        MultiLetterIdent("log"),
        CollectedLetters("cd"),
      ],
      style: None,
    ),
  ),
]
